argo-rollouts/istio/stable-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-canary-service
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout-canary
---
apiVersion: v1
kind: Service
metadata:
  name: istio-stable-service
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout-canary
