argo-rollouts/istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtual-service
spec:
  gateways:
  - rollouts-demo-gateway
  hosts: 
  - istio-stable-service.dev.svc.cluster.local
  - istio-canary-service.dev.svc.cluster.local
  http:
    - name: http-primary
      route:
      - destination:
          host: istio-stable-service
          port:
            number: 8080
        weight: 100
      - destination:
          host: istio-canary-service
          port:
            number: 8080
        weight: 0
